# receipt-print

./: README.md  flake.nix  pyproject.toml
receipt_print/: arena.py  cli.py  contact.py  discord_bot.py  image_loader.py  image_utils.py  imessage.py  markdown_render.py  multitone.py  pdf_utils.py  printer.py  shell.py  wifi.py  wiki.py
tests/: test_wifi.py
