[project]
name = "receipt-print"
version = "0.0.1"
description = "receipt printer CLI"
authors = [
  { name = "jmpaz" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.2.5",
    "python-escpos>=3.1",
    "pyusb>=1.3.1",
    "pdf2image>=1.17.0",
    "markitdown[all]>=0.1.0",
    "click>=8.2.1",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
]

[project.urls]
Homepage = "https://github.com/jmpaz/receipt-print"

[project.scripts]
receipt-print = "receipt_print.cli:main"

[tool.setuptools]
packages = ["receipt_print"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"


